2009-04-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_class_init):
	Bring back the 'external-border' style property
	(hildon_app_menu_class_init, hildon_app_menu_init)
	(hildon_app_menu_apply_style, hildon_app_menu_size_request):
	Set a fixed width-request for the menu, independent of the number
	of items.

	Fixes: NB#94957 (Smoothly opened application menu)

2009-03-30  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-defines.h: Define HILDON_WINDOW_TITLEBAR_HEIGHT

	* src/hildon-banner.c
	Change HILDON_BANNER_WINDOW_Y to HILDON_WINDOW_TITLEBAR_HEIGHT.
	(hildon_banner_map)
	Make sure that the banner is correctly placed the first time it's
	shown.
	(hildon_banner_check_position, -check_fullscreen_state):
	Show the banner in the same place no matter if the window is in
	fullscreen mode or not.

	Fixes: NB#107386 (Odd stacking behaviour for information banners)

2009-04-01  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c (_default_print_func): reorder
	concatenation for clarity.

2009-04-01  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c (_default_print_func): Plug a memory leak
	for multicolumn selectors.

	Fixes: NB#109099 (Memory leak in Hildon touch selector)

2009-03-30  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.58]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-sound.c (hildon_ca_context_get): Mark function as static and
	coding style fixes.

2009-03-26  Alejandro Pinheiro Iglesias <apinheiro@igalia.com>

	* configure.ac: removed libcangerra-gtk dependency
	* debian/control: removed libcanberra-gtk dependency
	* src/Makefile.am: removed libcanberra gtk related flags
	* src/hildon-sound.c: avoid to use ca_gtk_context_get to get a canberra
	context, and manage a global canberra context instead
